--- a/public/asset/css/backend.scss
+++ b/public/asset/css/backend.scss
@@ -62,3 +62,12 @@ footer {
     height: 100%;
   }
 }
+.tb-download-popover {
+  ul {
+    padding: 0;
+  }
+  .popover {
+    width: 400px;
+    max-width: 400px;
+  }
+}
