--- a/public/asset/css/backend.css
+++ b/public/asset/css/backend.css
@@ -1,3 +1,9 @@
+/**
+ * Templates/Extensions manager. Powered by MEAN stack
+ *
+ * @link    http://github.com/nghuuphuoc/templatemanager
+ * @author  http://twitter.com/nghuuphuoc
+ */
 .page-header {
   margin-top: 20px; }
 
