--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1,3 +1,9 @@
+/**
+ * Templates/Extensions manager. Powered by MEAN stack
+ *
+ * @link    http://github.com/nghuuphuoc/templatemanager
+ * @author  http://twitter.com/nghuuphuoc
+ */
 .tpl-body {
   background: #2c3e50; }
   .tpl-body .navbar, .tpl-body .nav {
