--- a/app/views/layouts/account.jade
+++ b/app/views/layouts/account.jade
@@ -42,7 +42,7 @@ html
                                     b.caret
                                 ul.dropdown-menu
                                     li
-                                        a(href="/") Visit demo website
+                                        a(href="#{frontEndUrl}") Visit demo website
                                     li
                                         a(href="/account/signout") Sign out
             .container
