--- a/app/views/layouts/backend.jade
+++ b/app/views/layouts/backend.jade
@@ -52,7 +52,7 @@ html
                                         a(href="/admin/password") Change password
                                     li.divider
                                     li
-                                        a(href="/") Visit demo website
+                                        a(href="#{frontEndUrl}") Visit demo website
                                     li
                                         a(href="/admin/signout") Sign out
             .container
