--- a/app/views/account/dashboard.jade
+++ b/app/views/account/dashboard.jade
@@ -58,15 +58,15 @@ block footerScript
                 $.post('/account/dashboard/download', {
                     limit: 5
                 }).success(function(response) {
-                    var demoUrl = '#{demoUrl}';
+                    var demoUrl = '#{frontEndUrl}';
                     $('#refreshRecentDownloads').parents('.panel').find('.panel-body').toggle();
                     $.each(response, function(index, download) {
-                        var downloadUrl = '/account/download/' + download.package.slug + '/' + download.file._id;
+                        var downloadUrl = '#{downloadUrl}/account/download/' + download.package.slug + '/' + download.file._id;
                         $('<tr/>')
                             .appendTo('#recentDownloads')
                             .append($('<td/>').append($('<a/>').attr('href', downloadUrl).html(download.file.name.length > 30 ? download.file.name.substr(0, 30) + '...' : download.file.name))
                                               .append($('<div/>').html(filesize(download.file.size))))
-                            .append($('<td/>').append($('<a/>').attr('href', demoUrl + '#' + download.package.slug).html(download.package.name)))
+                            .append($('<td/>').append($('<a/>').attr('href', !download.package ? '#' : ('template' == download.package.type ? demoUrl + '#' + download.package.slug : (download.package.demo_url || '#'))).html(download.package ? download.package.name : '-')))
                             .append($('<td/>').html(moment(download.downloaded_date).fromNow()))
                             .append(moment(download.downloaded_date).isAfter(download.file.uploaded_date)
                                     ? $('<td/>').html('<i class="fa fa-check"></i>')
