--- a/app/views/account/signin.jade
+++ b/app/views/account/signin.jade
@@ -26,7 +26,7 @@ block content
                     div.form-group
                         button.btn.btn-primary(type="submit") Sign in
                         span.form-control-static(style="margin: 0 10px;") &mdash; or &mdash;
-                        a.btn.btn-default(href="/") Visit demo website
+                        a.btn.btn-default(href="#{frontEndUrl}") Visit demo website
 
 
 block footerScript
