--- a/public/asset/css/style.scss
+++ b/public/asset/css/style.scss
@@ -95,6 +95,11 @@ footer {
     margin-left: 15px;
     margin-right: 15px;
   }
+  .tpl-tag-list {
+    max-height: 200px;
+    margin-right: 20px;
+    overflow: scroll;
+  }
 }
 .tpl-frame-container {
   position: fixed;
